SD-20: Fixed issues with bday